--- a/android/app/src/main/res/layout/activity_users.xml
+++ b/android/app/src/main/res/layout/activity_users.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    tools:context=".Users">
+    tools:context=".ui.adminFragments.Users">
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:orientation="vertical"
