--- a/android/app/src/main/res/layout/fragment_admin_panel_landscape.xml
+++ b/android/app/src/main/res/layout/fragment_admin_panel_landscape.xml
@@ -5,8 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:fillViewport="true"
-    android:background="@color/black"
-    tools:context=".ui.loginFragments.AdminPanel">
+    android:background="@color/black">
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:orientation="horizontal"
