--- a/android/app/src/main/res/layout/fragment_register_user.xml
+++ b/android/app/src/main/res/layout/fragment_register_user.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/black"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.loginFragments.RegisterUser">
+    tools:context=".ui.adminFragments.RegisterUser">
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:orientation="vertical"
