--- a/android/app/src/main/res/layout/fingerprint_scan.xml
+++ b/android/app/src/main/res/layout/fingerprint_scan.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
     <com.airbnb.lottie.LottieAnimationView
         android:layout_width="match_parent"
-        app:lottie_fileName="fingerprintscan"
+        app:lottie_fileName="fingerprintscan.json"
         app:lottie_repeatMode="restart"
         app:lottie_repeatCount="1000"
         app:lottie_autoPlay="true"
@@ -14,6 +14,7 @@
 
     </com.airbnb.lottie.LottieAnimationView>
     <TextView
+        android:layout_gravity="center_horizontal"
         android:layout_width="wrap_content"
         android:id="@+id/instruction"
         android:text="Please put your finger on the scanner"
